# hprose-cpp1x

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  travis.sh
hprose/: Any.h  Ref.h  Uri.cpp  Uri.h  Variant-inl.h  Variant.cpp  Variant.h
hprose/http/: Client.cpp  Client.h  Cookie.cpp  Cookie.h  CookieJar.h  Header.h  Method.h  Request.cpp  Request.h  Response.h  Status.h  Transport.h
hprose/http/asio/: Client.h  Transport.cpp  Transport.h
hprose/io/: ByteReader.cpp  ByteReader.h  ClassManager.h  Formatter.h  HproseTags.h  HproseWriter.cpp  HproseWriter.h  RawReader.cpp  RawReader.h  Reader-inl.h  Reader.cpp  Reader.h  Tags.h  Types.h  Writer-inl.h  Writer.cpp  Writer.h
hprose/io/decoders/: BoolDecoder.cpp  BoolDecoder.h  ComplexDecoder-inl.h  ComplexDecoder.h  FloatDecoder-inl.h  FloatDecoder.h  IntDecoder.cpp  IntDecoder.h  ListDecoder-inl.h  ListDecoder.h  MapDecoder-inl.h  MapDecoder.h  ObjectDecoder-inl.h  ObjectDecoder.h  StringDecoder.cpp  StringDecoder.h
hprose/io/test/: HproseWriterTest.cpp  ReaderTest.cpp  WriterTest.cpp
hprose/rpc/: Client.cpp  Client.h  Context.h  Filter.h
hprose/rpc/asio/: HttpClient.cpp  HttpClient.h
hprose/rpc/asio/test/: HttpClientTest.cpp
hprose/test/: VariantTest.cpp
hprose/util/: Config.h  PreProcessor.h  Util.cpp  Util.h
